# MoodWave

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  run_sandbox.bat
docker/: Dockerfile.spark  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/lib/: supabase.ts
frontend/types/: data.ts
k8s/: kustomization.yaml
k8s/configmaps/: app-config.yaml  kafka-config.yaml
k8s/kafka/: kafka-ui-ingress.yaml  kafka-ui.yaml  kafka-with-jmx.yaml  kafka.yaml  zookeeper.yaml
k8s/monitoring/: grafana-dashboards-configmap.yaml  grafana-dashboards-data.yaml  grafana-datasources.yaml  grafana.yaml  kafka-exporter.yaml  kafka-jmx-exporter.yaml  kube-state-metrics.yaml  kustomization.yaml  metrics-server.yaml  namespace.yaml  node-exporter.yaml  prometheus-config-fixed.yaml  prometheus-config.yaml  prometheus.yaml
k8s/producers/: news-producer-metrics-service.yaml  news-producer.yaml  track-producer-metrics-service.yaml  track-producer.yaml
k8s/secrets/: .gitignore  kafka-ui-auth.yaml  moodwave-secrets.yaml
k8s/spark/: spark-consumer.yaml
kafka-single-node/: docker-compose.yml
kafka-single-node/monitoring/: prometheus.yml
monitoring/: prometheus.yml
monitoring/grafana-dashboard/: dashboard.yml
monitoring/grafana-datasources/: datasource.yml
src/consumers/: news_producer.py  spark_streaming.py  track_producer.py
src/oldfiles/: charts.py  schema 1.sql  track_features.py
src/producers/: news_producer.py  replay_producer.py  track_producer.py
src/sandbox_producers/: sandbox_news_producer.py  (+1 more)
(+16 files in other folders)
